fix: removing horizontal scroll

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  overflow-x: hidden;
+}
+
 .hamburger {
   display: inline-block;
   cursor: pointer;
